--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.4",
+    "@mui/lab": "^5.0.0-alpha.172",
     "@mui/material": "^5.16.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.101",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-date-range": "^2.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
@@ -51,6 +52,11 @@
     ]
   },
   "devDependencies": {
+    "@types/moment": "^2.13.0",
+    "@types/react": "^18.3.3",
+    "@types/react-date-range": "^1.4.9",
+    "@types/react-dates": "^21.8.6",
+    "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.34"
   }
