--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,13 +15,16 @@
     "@types/node": "^16.18.101",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.6",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
@@ -58,6 +61,9 @@
     "@types/react-dates": "^21.8.6",
     "@types/react-dom": "^18.3.0",
     "@types/react-modal": "^3.16.3",
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6"
   }
 }
