--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.6",
+    "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.3.0",
@@ -34,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
